methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:9: error: not found: value break
        break
        ^